fix: устранить замечания

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,16 +1,22 @@
 .header {
   max-width: 880px;
-  max-height: 74px;
   margin: auto;
   padding-top: 45px;
   padding-bottom: 41px;
-  border-bottom: 1px #545454 solid;
+  border-bottom: 1px rgba(84, 84, 84, .7) solid;
 }
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 920px) {
+  .header {
+    max-width: 581px;
+  }
+}
+
+
+@media screen and (max-width: 620px) {
   .header {
     max-width: 320px;
-    max-height: 56px;
     padding-top: 28px;
     padding-bottom: 27px;
   }
