--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -3,12 +3,16 @@
   width: 22px;
   height: 19px;
   background: transparent;
+  background-image: url('../../../images/like-button.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border: none;
   align-self: center;
   cursor: pointer;
 }
 
 .element__button-like:hover {
-  opacity: .6;
-  transition: .5s;
+  opacity: .5;
+  transition: opacity .5s linear;
 }
