--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,10 +1,8 @@
 .element__image {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: center center no-repeat;
+  width: 282px;
+  height: 282px;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
 }
-
-
