--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,5 @@
 .element {
-  width: 100%;
-  height: 361px;
+  max-width: 282px;
   display: flex;
   flex-direction: column;
   background-color: #FFF;
