--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,9 +4,16 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   gap: 20px 17px;
+  justify-items: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
+  .elements {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 620px) {
   .elements {
     max-width: 282px;
     margin-bottom: 48px;
