--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,7 +4,13 @@
   padding-bottom: 60px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
+  .footer {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 620px) {
   .footer {
     max-width: 282px;
     padding-bottom: 36px;
