--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -5,6 +5,10 @@
   height: 24px;
   border: 1px #fff solid;
   background: transparent;
+  background-size: 10px 10px;
+  background-image: url('../../../images/edit-button.svg');
+  background-position: center;
+  background-repeat: no-repeat;
   cursor: pointer;
   grid-column: 2;
   grid-row: 1;
@@ -13,10 +17,11 @@
   border-radius: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 620px) {
   .profile__button-edit {
     width: 18px;
     height: 18px;
+    background-size: 7.5px 7.5px;
   }
 }
 
