--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,5 +8,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: all .4s linear;
 }
