--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__button-like/element__button-like.css);
 @import url(../blocks/element/__button-like/_active/element__button-like_active.css);
+@import url(../blocks/element/__button-delete/element__button-delete.css);
 
 /* --------------------------- Popup --------------------------- */
 @import url(../blocks/popup/popup.css);
@@ -35,6 +36,9 @@
 @import url(../blocks/popup/__button-close/popup__button-close.css);
 @import url(../blocks/popup/__icon-cross/popup__icon-cross.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__view-card-container/popup__view-card-container.css);
+@import url(../blocks/popup/__view-card-photo/popup__view-card-photo.css);
+@import url(../blocks/popup/__view-card-caption/popup__view-card-caption.css);
 
 /* --------------------------- Footer --------------------------- */
 @import url(../blocks/footer/footer.css);
