--- a/blocks/popup/__container/_type/popup__container_type_form.css
+++ b/blocks/popup/__container/_type/popup__container_type_form.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup__container_type_form {
   position: relative;
   max-width: 430px;
   background-color: #fff;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .popup__container {
+  .popup__container_type_form {
     max-width: 282px;
   }
 }
