--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__button-save {
+.popup__button {
   padding: 0;
   margin: 0;
   margin-top: 38px;
@@ -16,7 +16,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .popup__button-save {
+  .popup__button {
     height: 46px;
     margin-top: 45px;
     font-size: 14px;
@@ -24,7 +24,7 @@
   }
 }
 
-.popup__button-save:hover {
+.popup__button:hover {
   opacity: .8;
   transition: opacity .5s linear;
 }
