--- a/src/blocks/profile/__about/profile__about.css
+++ b/src/blocks/profile/__about/profile__about.css
@@ -1,4 +1,4 @@
-.profile__occupation {
+.profile__about {
   padding: 0;
   margin: 0;
   font-weight: 400;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 620px){
-  .profile__occupation {
+  .profile__about {
     padding-left: 26px;
     font-size: 14px;
     line-height: 17px;
